syntax = "proto3";

option go_package = ".;service";

service UserService {
  rpc GetUserInfo(GetUserInfoRequest) returns (GetUserInfoResponse);
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
}

message GetUserInfoRequest {
  int32 id = 1;
}

message GetUserInfoResponse {
  int32 id = 1;
  string name = 2;
  int32 age = 3;
  string email = 4;
}

message CreateUserRequest {
  string name = 1;
  int32 age = 2;
  string email = 3;
}

message CreateUserResponse {
  int32 id = 1;
}

message UpdateUserRequest {
  int32 id = 1;
  string name = 2;
  int32 age = 3;
  string email = 4;
}

message UpdateUserResponse {
  bool success = 1;
}

message DeleteUserRequest {
  int32 id = 1;
}

message DeleteUserResponse {
  bool success = 1;
}
